// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profile reducer should handle CLEAR_PROFILE 1`] = `
Immutable.Map {
  "id": "",
  "avatar": "",
  "firstName": "",
  "lastName": "",
}
`;

exports[`profile reducer should handle FILL_PROFILE 1`] = `
Immutable.Map {
  "id": "TEST_ID",
  "avatar": "TEST_AVATAR",
  "firstName": "Walter",
  "lastName": "White",
  "token": "TEST_TOKEN",
}
`;

exports[`profile reducer should handle UPDATE_PROFILE 1`] = `
Immutable.Map {
  "id": "",
  "avatar": Array [],
  "firstName": "",
  "lastName": "",
}
`;

exports[`profile reducer should return initial state 1`] = `
Immutable.Map {
  "id": "",
  "avatar": "",
  "firstName": "",
  "lastName": "",
}
`;
